syntax="proto3";

package greet;
option go_package="greetpb";


service GreetService {
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bidirection 
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

}


message Greeting {
    string first_name = 1;
    string last_name =   2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string results =    1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string results = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string results = 1;
}

message GreetEveryoneRequest {
    Greeting greeting =1;
}

message GreetEveryoneResponse {
    string results = 1;
}


